# python-project-83

./: .env_example  .gitignore  Makefile  README.md  build.sh  database.sql  modules.py  pyproject.toml  repository.py  ruff.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/urls/: show.html  view.html
